# echPlus

./: .gitignore  LICENSE  README.md  README_CN.md  go.work  go.work.sum  package.json
.github/workflows/: docker-publish.yml  release-client.yml  release-desktop.yml  release-server.yml  server-rust.yml
apps/client/: Dockerfile  README.md  go.mod  main.go
apps/client/core/: core.go  logger.go  stats.go
apps/desktop/: Taskfile.yml  go.mod  go.sum  main.go
apps/desktop/config/: index.go
apps/desktop/database/: database.go
apps/desktop/frontend/: package.json  vite.config.ts
apps/desktop/frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/desktop/frontend/src/components/: Sidebar.tsx  TrafficStats.tsx  theme-provider.tsx
apps/desktop/frontend/src/querys/: config.ts  nodes.ts  proxy.ts
apps/desktop/frontend/src/routes/: __root.tsx  (+5 more)
apps/desktop/logger/: logger.go
apps/desktop/models/: user.go
apps/desktop/services/: client_log_handler.go  config_service.go  log_service.go  node_service.go  proxy_darwin.go  proxy_linux.go  proxy_server.go  proxy_windows.go  user_service.go
apps/desktop/views/: views.go
apps/docs/: package.json
apps/docs/.source/: browser.ts  server.ts
apps/docs/app/: layout.tsx
apps/docs/app/(home)/: page.tsx
apps/docs/content/docs/: desktop.mdx  index.mdx  meta.json  principle.mdx
apps/docs/lib/: layout.shared.tsx
apps/server/: Dockerfile  go.mod  go.sum  main.go
apps/server-rust/: Cargo.toml  Dockerfile  README.md  VERSION.md
apps/server-rust/src/: main.rs  vless.rs
apps/server/tunnel/: tunnel.go
(+25 files in other folders)
